--- a/bower.json
+++ b/bower.json
@@ -8,5 +8,17 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "zmughal-build-pdf.js": "zmughal/zmughal-build-pdf.js",
+    "backbone": "~1.0.0",
+    "jquery": "~2.0.3",
+    "underscore": "~1.5.1",
+    "require-cs": "~0.4.4",
+    "requirejs": "~2.1.8"
+  },
+  "install": {
+    "path": "public/vendor",
+    "sources": { }
+  }
 }
