--- a/bower.json
+++ b/bower.json
@@ -15,10 +15,16 @@
     "jquery": "~2.0.3",
     "underscore": "~1.5.1",
     "require-cs": "~0.4.4",
-    "requirejs": "~2.1.8"
+    "requirejs": "~2.1.8",
+    "bootstrap": "~3.0.0-rc1"
   },
   "install": {
     "path": "public/vendor",
-    "sources": { }
+    "sources": {
+      "bootstrap": [
+        "bower_components/bootstrap/dist/js/bootstrap.js",
+        "bower_components/bootstrap/dist/css/bootstrap.css"
+      ]
+    }
   }
 }
