--- a/velociraptero.conf
+++ b/velociraptero.conf
@@ -1,7 +1,14 @@
 #!/usr/bin/env perl
 use Biblio::Zotero::DB;
+use List::UtilsBy qw(min_by);
+use Moo::Role;
+
+# find the most recently modified
+my $newest = min_by { -M } @{Biblio::Zotero::DB->find_profile_directories};
+my $db = Biblio::Zotero::DB->new( profile_directory => $newest  );
+Moo::Role->apply_roles_to_object($db, 'Biblio::Zotero::DB::Role::CopyDB');
+
 use strict;
 {
-	config => 'test',
-	zotero_db => Biblio::Zotero::DB->new(),
+	zotero_db => $db,
 };
