--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "require-cs": "~0.4.4",
     "requirejs": "~2.1.8",
     "bootstrap": "~3.0.0-rc.2",
-    "font-awesome": "~3.2.1"
+    "font-awesome": "~3.2.1",
+    "jqtree": "~0.20"
   },
   "install": {
     "path": "public/vendor",
