--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,7 @@
     "underscore": "~1.5.1",
     "require-cs": "~0.4.4",
     "requirejs": "~2.1.8",
-    "bootstrap": "~3.0.0-rc.2",
+    "bootstrap": "~3.1.1",
     "font-awesome": "~3.2.1",
     "jqtree": "~0.20"
   },
