--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "requirejs": "~2.1.8",
     "bootstrap": "~3.1.1",
     "font-awesome": "~3.2.1",
-    "jqtree": "~0.20"
+    "jqtree": "~0.20",
+    "DataTables": "~1.10.0-beta.2"
   },
   "install": {
     "path": "public/vendor",
