--- a/velociraptero.conf
+++ b/velociraptero.conf
@@ -1,14 +1,30 @@
 #!/usr/bin/env perl
+
+use strict;
+use warnings;
+
 use Biblio::Zotero::DB;
 use List::UtilsBy qw(min_by);
 use Moo::Role;
+use File::HomeDir;
+use Path::Class qw(dir);
+use CHI;
+
+my $app_name = 'velociraptero';
 
 # find the most recently modified
 my $newest = min_by { -M } @{Biblio::Zotero::DB->find_profile_directories};
 my $db = Biblio::Zotero::DB->new( profile_directory => $newest  );
 Moo::Role->apply_roles_to_object($db, 'Biblio::Zotero::DB::Role::CopyDB');
 
-use strict;
+my $dir = dir( File::HomeDir->my_home )
+	->subdir('.cache', $app_name);
+$dir->mkpath;
+my $cache_dir = "$dir";
+my $chi = CHI->new( driver => 'File', root_dir => $cache_dir );
+
+
 {
 	zotero_db => $db,
+	chi => $chi,
 };
