WIP: pdf2htmlEX loading

--- a/velociraptero.conf
+++ b/velociraptero.conf
@@ -3,6 +3,7 @@
 use strict;
 use warnings;
 
+use FindBin;
 use Biblio::Zotero::DB;
 use List::UtilsBy qw(min_by);
 use Moo::Role;
@@ -23,6 +24,8 @@ $dir->mkpath;
 my $cache_dir = "$dir";
 my $chi = CHI->new( driver => 'File', root_dir => $cache_dir );
 
+my $pdf2htmlEX_path = dir( $FindBin::Bin )->subdir('pdf2htmlEX/pdf2htmlEX-master');
+$ENV{PATH} = "$ENV{PATH}:$pdf2htmlEX_path" if -d $pdf2htmlEX_path;
 
 {
 	zotero_db => $db,
