add L1 cache in memory

--- a/velociraptero.conf
+++ b/velociraptero.conf
@@ -22,7 +22,12 @@ my $dir = dir( File::HomeDir->my_home )
 	->subdir('.cache', $app_name);
 $dir->mkpath;
 my $cache_dir = "$dir";
-my $chi = CHI->new( driver => 'File', root_dir => $cache_dir );
+my $chi = CHI->new( driver => 'File',
+	root_dir => $cache_dir,
+	l1_cache => {
+		driver => 'Memory',
+		global => 1,
+	});
 
 my $pdf2htmlEX_path = dir( $FindBin::Bin )->subdir('pdf2htmlEX/pdf2htmlEX-master');
 $ENV{PATH} = "$ENV{PATH}:$pdf2htmlEX_path" if -d $pdf2htmlEX_path;
